--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-toast-notifications": "^2.4.0",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2"
   },
